@@ -113,3 +113,5 @@ Release 0.3 -> Release 0.4
 
   * PNG now works for images without alpha channels (uncompressed inside the
 	PDF for now).
+
+  * PNG now works for images with alpha channels (the alpha channel is ignored)
